<resources>
    <string name="app_name">JustBook</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- <string name="accept_condition">I accept the
        <font fgcolor="#b29763">Reservation and payment terms</font> </string>-->
    <string name="welcome_signIn">Welcome ! Please Sign In</string>
    <string name="signIn_justbook">Sign in with JustBook</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_Password">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">OR</string>
    <string name="signIn_with_google">Sign In With Google</string>
    <string name="signIn_with_fb">Sign In With Facebook</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="next">NEXT</string>
    <string name="client_Registration">Client Registration</string>
    <string name="name">Name</string>
    <string name="last_Name">LastName</string>
    <string name="phone_Number">Phone Number</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="place_Type">Place Type?</string>
    <string name="choose_a_date">Choose a date</string>
    <string name="what_time">What time?</string>
    <string name="people">People</string>
    <string name="search">Search</string>
    <string name="bars">BARS</string>
    <string name="clubs">CLUBS</string>
    <string name="restaurants">RESTAURANTS</string>
    <string name="home">Home</string>
    <string name="events">Events</string>
    <string name="booking">Booking</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="favourite_Places">Favourite Places</string>
    <string name="finish_your_reservation">Finish  your reservation</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="none">None</string>
    <string name="best_Review">Best Review</string>
    <string name="reserve">Reserve</string>
    <string name="take_advantages_offer_reservation">Take advantages of this offer by making a reservation</string>
    <string name="offer_avaliable">Offer avaliable</string>
    <string name="reserve_this_offer">Reserve this offer</string>
    <string name="logout">Logout</string>
    <string name="minimum_consumption">Minimum consumption</string>
    <string name="minimum_voucher">Minimum voucher</string>
    <string name="reservation_for_smokers">Reservation for smokers</string>
    <string name="add_Promo_code">Add Promo code :</string>
    <string name="promo_code">Promo code</string>
    <string name="discount_from_final_bill">discount from final bill</string>
    <string name="find_on_Map">Find on Map</string>
    <string name="You_donot_have_notifications">You do not have notifications.</string>
    <string name="reservation_note">Reservation note</string>
    <string name="reserve_Now">Reserve Now</string>
    <string name="forgot_Password">Forgot Password</string>
    <string name="email_Address">Email Address</string>
    <string name="messages">Messages</string>
    <string name="you_have_no_messages">You have no messages</string>
    <string name="offers">Offers</string>
    <string name="type_of_place">Type of place</string>
    <string name="type_of_offer">Type of offer</string>
    <string name="last_name">Last Name</string>
    <string name="month">Month</string>
    <string name="phone">Phone</string>
    <string name="discription">Discription :</string>
    <string name="website">Website</string>
    <string name="all_Discription"> All Discription</string>
    <string name="from">from </string>
    <string name="reviews">reviews</string>
    <string name="stars">Stars</string>
    <string name="address">Address</string>
    <string name="preview">Preview</string>
    <string name="type">Type</string>

    <string name="current_bookings">Current bookings</string>
    <string name="work_Day">Work Day</string>
    <string name="your_reservation_pendding_approval">Your reservation is pendding approval from the place.</string>

    <string name="work_Time">Work Time</string>
    <string name="category">Category</string>
    <string name="place_Sub_categories">Place Sub-categories</string>
    <string name="filter_by_music_type">Filter by music type</string>
    <string name="search_by_artist_name">Search by artist name</string>
    <string name="city_Name">City Name</string>
    <string name="updated_Profile">Updated Profile</string>
    <string name="anonymous_resrvations">Anonymous resrvations</string>
    <string name="make_Reservation">Make Reservation</string>
    <string name="choose_hour">Choose hour</string>
    <string name="share_in_Facebook">Share in Facebook</string>
    <string name="reservation_is_pending_approval">Your reservation is pending approval \nfrom the place.</string>
    <string name="well_be_expecting_you_on">Will be expecting you on</string>
    <string name="your_Reservation_has_been_completed">Your Reservation has been completed</string>
    <string name="select_guests_number_and_time">Select a guests number and time</string>
    <string name="I_want_receive_mail_notifications">I want to receive mail notifications from places</string>


</resources>
