<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ResrvationCompletedActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@color/golden_color"
            android:layout_height="60dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/roboto_regular"
               android:layout_centerVertical="true"
                android:text="@string/your_Reservation_has_been_completed"
                android:textColor="@color/white_color"
                android:textSize="16sp"/>

         <ImageView
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:src="@drawable/cancel"
             android:padding="12dp"
             android:layout_marginEnd="10dp"
             android:layout_centerVertical="true"
             android:background="?actionBarItemBackground"
             android:layout_alignParentRight="true"/>




        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
           android:gravity="center"
            android:layout_height="60dp">
        <TextView
            android:id="@+id/txt_expe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="@font/roboto_regular"
            android:layout_centerVertical="true"
            android:text="@string/well_be_expecting_you_on"
            android:textColor="@color/black_color"
            android:textSize="14sp"/>

            <TextView
                android:layout_toRightOf="@id/txt_expe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/roboto_regular"
                android:layout_centerVertical="true"
                android:text=" 11.02.2020,12:30"
                android:textColor="@color/black_color"
                android:textSize="14sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
           android:gravity="center"
            android:background="@color/back_color"
            android:layout_height="80dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/reservation_is_pending_approval"
                android:textAlignment="center"
                android:textColor="@color/golden_color"
                android:textSize="14sp" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="200dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/blue_corner"
            android:layout_marginTop="25dp"
            android:layout_height="40dp">

            <ImageView
                android:id="@+id/img_fb"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:src="@drawable/fb_200"/>

            <TextView
                android:layout_toRightOf="@id/img_fb"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/share_in_Facebook"
                android:layout_marginStart="10dp"
               android:gravity="center_vertical"
                android:textAlignment="center"
                android:textColor="@color/white_color"
                android:textSize="14sp" />
        </RelativeLayout>




    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/golden_color"
        android:layout_alignParentBottom="true"
        android:layout_height="60dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/preview"
            android:gravity="center"
            android:textColor="@color/white_color"
            android:textSize="16sp" />
    </RelativeLayout>

</RelativeLayout>