<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LogInActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_above="@+id/ll_Bottom"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/golden_color">

          <ImageView
              android:id="@+id/img_Back"
              android:layout_width="50dp"
              android:layout_height="50dp"
              android:padding="14dp"
              android:layout_centerVertical="true"
              android:background="?actionBarItemBackground"
              android:src="@drawable/back_90"/>


            <TextView
                android:layout_toRightOf="@id/img_Back"
                android:layout_width="match_parent"
                android:fontFamily="@font/opensans_regular"
                android:layout_height="match_parent"
                android:text="@string/welcome_signIn"
                android:textSize="16sp"
                android:textColor="@color/white_color"
                android:gravity="center_vertical">
            </TextView>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">


            <TextView
                android:layout_width="match_parent"
                android:text="@string/signIn_justbook"
                android:elevation="6dp"
                android:fontFamily="@font/opensans_regular"
                android:layout_marginStart="15dp"
                android:textColor="@color/black_color"
                android:textSize="14sp"
                android:gravity="center_vertical"
                android:layout_height="40dp"
                />

        </RelativeLayout>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginRight="20dp"
            android:layout_centerVertical="true"
            android:src="@drawable/email_90"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:theme="@style/myTextInputLabel"
            android:layout_marginStart="20dp"
            android:paddingLeft="10dp"  >


            <EditText

                android:id="@+id/edt_Email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:hint="@string/email"
                android:maxLength="30"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="14sp">


            </EditText>

        </com.google.android.material.textfield.TextInputLayout>


</RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginRight="20dp"
                android:layout_centerVertical="true"
                android:src="@drawable/password_90"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                app:passwordToggleEnabled="true"
                android:theme="@style/myTextInputLabel"
                android:paddingLeft="10dp"  >


                <EditText

                    android:id="@+id/edt_Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                     android:singleLine="true"

                    android:fontFamily="@font/opensans_regular"

                    android:layout_centerVertical="true"
                    android:layout_marginStart="30dp"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:textSize="14sp">


                </EditText>

            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/txt_Forgot"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/forgot_password"
            android:textSize="14sp"
            android:fontFamily="@font/opensans_regular"
            android:gravity="center_vertical"
            android:layout_marginStart="35dp"
            android:textColor="@color/golden_color">



        </TextView>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <View
            android:id="@+id/view"
            android:layout_width="150dp"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@color/grey_color"/>

        <TextView
            android:id="@+id/txt_Or"
            android:layout_toRightOf="@id/view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:fontFamily="@font/opensans_regular"
            android:textSize="14sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textColor="@color/golden_color"/>

            <View
                android:id="@+id/view1"
                android:layout_width="150dp"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@id/txt_Or"
                android:background="@color/grey_color"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/grey_corner_dsgn"
            android:layout_height="40dp">

            <ImageView
                android:id="@+id/img_Google"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/google_200"
                />

            <TextView
                android:id="@+id/txt_Google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="20dp"
                android:layout_toRightOf="@id/img_Google"
                android:fontFamily="@font/opensans_regular"
                android:text="@string/signIn_with_google"
                android:textColor="@color/black_color"
                android:textSize="14sp" />

          <!--  <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
               />-->

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/grey_corner_dsgn"
            android:layout_height="40dp">

            <ImageView
                android:id="@+id/img_Fb"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/fb_200"
                />

            <TextView
                android:id="@+id/txt_Fb"
                android:layout_toRightOf="@id/img_Fb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signIn_with_fb"
                android:textSize="14sp"
                android:fontFamily="@font/opensans_regular"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="20dp"
                android:textColor="@color/black_color"/>

        </RelativeLayout>




    </LinearLayout>
</ScrollView>


    <LinearLayout
        android:id="@+id/ll_Bottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:weightSum="2">
        <RelativeLayout
            android:id="@+id/rl_SignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/txt_SignUp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="5dp"
                android:background="@color/golden_color"
                android:elevation="6dp"
                android:fontFamily="@font/opensans_regular"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textColor="@color/white_color"
                android:textSize="14sp" />


        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/txt_SignIn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="5dp"
                android:background="@color/golden_color"
                android:elevation="6dp"
                android:fontFamily="@font/opensans_regular"
                android:gravity="center"
                android:text="@string/sign_in"
                android:textColor="@color/white_color"
                android:textSize="14sp" />


        </RelativeLayout>
    </LinearLayout>


    <com.github.ybq.android.spinkit.SpinKitView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/spin_kit"
        android:layout_width="70dp"
        android:layout_gravity="center"
        android:layout_height="70dp"
        android:visibility="gone"
        android:layout_centerInParent="true"
        style="@style/SpinKitView.FadingCircle"
        app:SpinKit_Color="@color/golden_color" />

</RelativeLayout>